# MaCS_Exams_Summer_MP_2026

./: .gitignore  CMakeLists.txt  README.md
algebra/: tickets_algebra.md  tickets_algebra_pdf_safe.md
algo/: piska.md
dm/: 31.md  piska_nenasheva.md
holy_c/: CMakeLists.txt  ticket_cpp.md
holy_c/include/: ticket_lib1.hpp  ticket_lib9.hpp
holy_c/src/: ticket1.cpp  ticket10.cpp  ticket11.cpp  ticket12.cpp  ticket13.cpp  ticket14.cpp  ticket15.cpp  ticket16.cpp  ticket17.cpp  ticket18.cpp  ticket19.cpp  ticket2.cpp  ticket20.cpp  ticket21.cpp  ticket3.cpp  ticket4.cpp  ticket5.cpp  ticket6.cpp  ticket7.cpp  ticket8.cpp  ticket9.cpp
matan/: matan2_exam_tickets_2_0.md
