cmake_minimum_required(VERSION 3.28)

project(holy_c LANGUAGES C CXX)

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(EXECUTABLE_OUTPUT_DIR "${CMAKE_CURRENT_SOURCE_DIR}/exes")

foreach(TICKET_NUMBER RANGE 1 21)
    set(TICKET_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/src/ticket${TICKET_NUMBER}.cpp")
    set(TICKET_HEADER "${CMAKE_CURRENT_SOURCE_DIR}/include/ticket_lib${TICKET_NUMBER}.hpp")

    add_executable(ticket${TICKET_NUMBER}
            "${TICKET_SOURCE}"
            "${TICKET_HEADER}")
    set_target_properties(ticket${TICKET_NUMBER}
            PROPERTIES
            RUNTIME_OUTPUT_DIRECTORY "${EXECUTABLE_OUTPUT_DIR}"
            RUNTIME_OUTPUT_DIRECTORY_DEBUG "${EXECUTABLE_OUTPUT_DIR}"
            RUNTIME_OUTPUT_DIRECTORY_RELEASE "${EXECUTABLE_OUTPUT_DIR}"
            RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${EXECUTABLE_OUTPUT_DIR}"
            RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${EXECUTABLE_OUTPUT_DIR}")
    target_include_directories(ticket${TICKET_NUMBER}
            PRIVATE
            "${CMAKE_CURRENT_SOURCE_DIR}/include")
endforeach()
